# Noir-Groth16

./: .gitignore  AGENTS.md  Cargo.toml  Nargo.toml  README.md  prompts.md  spec.md  tutorial.md
.github/workflows/: ci.yml
circuits/: Nargo.toml  inputs.json
circuits/src/: main.nr
contracts/src/: lib.rs
crates/noir-acir/: Cargo.toml
crates/noir-acir/src/: lib.rs
crates/noir-cli/: Cargo.toml
crates/noir-cli/src/: main.rs
crates/noir-cli/tests/: cli.rs  compat_corpus.rs  interop.rs
crates/noir-r1cs/: Cargo.toml
crates/noir-r1cs/src/: lib.rs  poseidon2_constants.rs
crates/noir-witness/: Cargo.toml
crates/noir-witness/src/: lib.rs  poseidon2.rs
demo/: circuit.r1cs  circuit_0000.zkey  circuit_final.zkey  package-lock.json  proof.json  verification_key.json  witness.json  witness.wtns
docs/: _config.yml  cli-reference.md  index.md  opcode_support.md  provekit-groth16-report.md  quickstart.md  snarkjs-interop.md  technical-reference.md  troubleshooting.md
examples/: README.md  run_test_suite.sh  run_tutorial_suite.sh
examples/arithmetic_assert/: Nargo.toml  inputs.json
examples/arithmetic_assert/src/: main.nr
examples/array_struct_lookup/: Nargo.toml  inputs.json
examples/array_struct_lookup/src/: main.nr
examples/bitwise_u8/: Nargo.toml  inputs.json
examples/bitwise_u8/src/: main.nr
examples/blake2s_digest/: Nargo.toml  inputs.json
examples/blake2s_digest/src/: main.nr
examples/boolean_logic/: Nargo.toml  inputs.json
examples/boolean_logic/src/: main.nr
examples/bounded_loop_partial_sum/: Nargo.toml  inputs.json
examples/bounded_loop_partial_sum/src/: main.nr
examples/demo/: Nargo.toml  inputs.json
examples/dynamic_index_lookup/: Nargo.toml  inputs.json
examples/dynamic_index_lookup/src/: main.nr
examples/fixed_loop_sum/: Nargo.toml  inputs.json
examples/fixed_loop_sum/src/: main.nr
examples/full_features/: Nargo.toml  inputs.json
examples/full_features/src/: main.nr
examples/inequality_check/: Nargo.toml
examples/inequality_check/src/: main.nr
examples/multi_function_chain/: Nargo.toml  inputs.json
examples/multi_function_chain/src/: main.nr
examples/nested_matrix_index/: Nargo.toml  inputs.json
examples/nested_matrix_index/src/: main.nr
examples/pedersen_hash/: Nargo.toml  inputs.json
examples/pedersen_hash/src/: main.nr
examples/poseidon2_state_word/: Nargo.toml  inputs.json
examples/poseidon2_state_word/src/: main.nr
examples/provekit/basic/: Nargo.toml
examples/provekit/basic-2/: Nargo.toml  inputs.json
examples/provekit/basic-3/: inputs.json
examples/provekit/basic-4/: Nargo.toml  Prover.toml  inputs.json
examples/provekit/csp-benchmarks/: README.md
examples/provekit/eddsa_poseidon2/: inputs.json
examples/provekit/embedded_curve_msm/: Nargo.toml  Prover.toml  Prover_near_identity.toml  Prover_near_order.toml  Prover_single_nonzero.toml  Prover_zero_scalars.toml  inputs.json
examples/provekit/many_poseidons/: Nargo.toml  inputs.json
examples/provekit/msm_conditional/: Nargo.toml  Prover.toml  Prover_inactive.toml  Prover_scalar2.toml  inputs.json
examples/provekit/msm_conditional_nested/: Nargo.toml  Prover.toml  Prover_inner_false.toml  Prover_outer_false.toml  inputs.json
examples/provekit/native_msm/: Nargo.toml  Prover.toml  inputs.json
examples/provekit/noir-native-sha256/: Nargo.toml  inputs.json
examples/provekit/noir_sha256/: Nargo.toml  Prover.toml  inputs.json
examples/provekit/oprf/: Prover.toml  inputs.json
examples/provekit/p256_bigcurve/: Nargo.toml  Prover.toml  inputs.json
examples/provekit/p256_std/: inputs.json
examples/provekit/partial_sha256/: Nargo.toml
examples/provekit/poseidon-rounds/: Prover.toml  inputs.json
examples/provekit/poseidon2/: Nargo.toml  inputs.json
examples/provekit/power/: inputs.json  prove.sh
examples/provekit/rangechecks/: Nargo.toml
examples/provekit/sha256/: Nargo.toml  Prover.toml  inputs.json
examples/provekit/zkchase/: Prover.toml  inputs.json
examples/range_u32/: Nargo.toml  inputs.json
examples/range_u32/src/: main.nr
examples/shift_and_mask/: Nargo.toml  inputs.json
examples/string_ascii_sum/: Nargo.toml  inputs.json
examples/struct_transfer/: Nargo.toml  inputs.json
examples/tuple_flag/: Nargo.toml  inputs.json
examples/tuple_inputs_complex/: Nargo.toml  inputs.json
scripts/: encode_bn254_for_soroban.mjs  run_circuit.sh  verify_stellar.sh
scripts/lib/: common.sh
test-vectors/: blackbox_bool_artifact.json  fixture_artifact.json  fixture_inputs.json  memory_mux_artifact.json  memory_mux_inputs.json  unsupported_brillig_artifact.json
(+206 files in other folders)
