[workspace]
members = [
  "crates/noir-acir",
  "crates/noir-witness",
  "crates/noir-r1cs",
  "crates/noir-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
acir = { git = "https://github.com/noir-lang/noir.git", tag = "v1.0.0-beta.19", package = "acir" }
acvm = { git = "https://github.com/noir-lang/noir.git", tag = "v1.0.0-beta.19", package = "acvm" }
bn254_blackbox_solver = { git = "https://github.com/noir-lang/noir.git", tag = "v1.0.0-beta.19", package = "bn254_blackbox_solver" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
r1cs-file = "0.3.0"
wtns-file = "0.1.5"
tempfile = "3.14"
