[package]
name = "noir-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
interop-test = []

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
noir-acir = { path = "../noir-acir" }
noir-r1cs = { path = "../noir-r1cs" }
noir-witness = { path = "../noir-witness" }

[dev-dependencies]
tempfile.workspace = true
